# Artificial-Life-and-Foundation-Models

./: .gitmodules  README.md  clean_output.py  csv_json.py  download_wandb_data.py  gen_csv.py  gen_high_level_csv.py  instruction_prompts.py  level_oe_scores.json  main_evolutionary_appending_prompts.py  main_evolutionary_multiple_prompts_temporal.py  main_evolutionary_prompting.py  main_evolutionary_prompting_exp1.py  main_evolutionary_prompts_last_only.py  main_evolutionary_prompts_temporal.py  main_evolutionary_prompts_temporal_dynamic_rollout.py  main_evolutionary_prompts_temporal_graph.py  main_evolutionary_prompts_temporal_graph_with_flavour.py  main_evolutionary_prompts_temporal_no_video.py  main_evolutionary_video_only.py  main_oe_graphs.py  main_similarity.py  main_sweep_temp.py  main_video_diversity.py  make_hd_video.py  make_oe_score_text.py  make_open_ended_scores.py  mean_table.py  plot_gifs.py  plot_gifs_multline.py  plot_loss.py  plot_loss_convergence_analysis.py  process_high_level_summary.py  pyproject.toml  requirements.txt  setup.sh  sweep_dynamic.yaml  sweep_initial_prompt.yaml  sweep_initial_prompt_flenia.yaml  sweep_initial_prompts_non_temporal.yaml  (+5 more)
a_catepillar_nca/: best.pkl  data.pkl  final_prompt_chains.csv
asal_pytorch/: asal_metrics.py  main_opt.py  reconstruction_loss_opt.py  rollout.py
graph_flavour/: best.pkl  branches.json  data.pkl  final_prompt_chains.csv  graph_plotting.py  tree_view_flavour.html
graph_test/: best.pkl  branches.json  data.pkl  final_prompt_chains.csv
graphs_a_star/: best.pkl  data.pkl  final_prompt_chains.csv
(+271 files in other folders)
